--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
                 <a href="#">Book a call <img src="./assets/svgs/right-arrow.svg" alt=""></a>
             </nav>
         </header>
+
+        <section class="introduction">
+            <div class="intro-left">
+                <h1><span>I design products</span> that delight and inspire people.</h1>
+                <p>Hi! I'm Jake, a product designer based in Berlin. I create user-friendly interfaces for fast-growing startups.</p>
+
+                <div class="bookacall">
+                    <button>Book a call</button>
+                    <a href="./assets/svgs/logo.svg" download>CV-ni endir <img src="./assets/svgs/right-arrow.svg" alt=""></a>
+                </div>
+            </div>
+
+            <div class="intro-right">
+                <img src="./assets/svgs/oglan.svg" alt="">
+            </div>
+        </section>
+
     </div>
+
+
 </body>
 </html>
