partnyorlar hissesi ugurla yaradildi ve media elave edildi

--- a/index.html
+++ b/index.html
@@ -52,6 +52,25 @@
             </div>
         </section>
 
+        <section class="partners">
+            <h4>Trusted by</h4>
+
+            <div class="partners-company">
+                <div class="company">
+                   <img src="./assets/svgs/trusted-by/partner-1.svg" alt="IT Brains">
+                </div>
+                <div class="company">
+                    <img src="./assets/svgs/trusted-by/partner-2.svg" alt="">
+                </div>
+                <div class="company">
+                    <img src="./assets/svgs/trusted-by/partner-3.svg" alt="">
+                </div>
+                <div class="company">
+                    <img src="./assets/svgs/trusted-by/partner-1.svg" alt="IT Brains">
+                </div>
+            </div>
+        </section>
+
     </div>
 
 
